[package]
name = "notcurses"
version = "3.2.2"
edition = "2021"
rust-version = "1.64.0"
authors = ["José Luis Cruz <joseluis@andamira.net>", "nick black <dankamongmen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A high level Rust wrapper for the notcurses C library"
repository = "https://github.com/dankamongmen/notcurses-rs"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
readme = "./README.md"
categories = [
	"api-bindings",
	"command-line-interface",
	"visualization",
	"rendering",
]
keywords = ["tui", "cli", "terminal", "ncurses"]
include = [
	"/src/**/*rs",
	"/examples/hello-world.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
publish = true

[dependencies]
libnotcurses-sys = "3.7.4"
# libnotcurses-sys = { path = "../libnotcurses-sys" }
# libnotcurses-sys = { git = "https://github.com/dankamongmen/libnotcurses-sys" }

az = "1.2.1"
once_cell = "1.17.0"
paste = "1.0.11"
rgb = { version = "0.8.35", default-features = false }

[dev-dependencies]
rand = "0.8"

[features]
vendored = ['libnotcurses-sys/use_vendored_bindings']

[package.metadata.docs.rs]
features = ["vendored"]

[badges]
maintenance = { status = "actively-developed" }
