[package]
name = "notcurses"
version = "3.2.4"
edition = "2021"
rust-version = "1.64.0" # keep in sync with .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>", "nick black <dankamongmen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A high level Rust wrapper for the notcurses C library"
repository = "https://github.com/dankamongmen/notcurses-rs"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
readme = "./README.md"
categories = [
	"api-bindings",
	"command-line-interface",
	"visualization",
	"rendering",
]
keywords = ["tui", "cli", "terminal", "ncurses"]
include = [
	"/src/**/*rs",
	"/examples/hello-world.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
publish = true

[features]
default = []
vendored = ['libnotcurses-sys/use_vendored_bindings']

[dependencies]
libnotcurses-sys = { version = "3.8.0", features = ["std"] }

az = "1.2.1"
once_cell = "1.17.0"
paste = "1.0.12"
rgb = { version = "0.8.35", default-features = false }

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
features = ["vendored"]

[badges]
maintenance = { status = "actively-developed" }
