[package]
name = "notcurses"
version = "3.4.1"
edition = "2021"
rust-version = "1.65.0" # keep in sync with .github/workflows/check.yml
authors = ["José Luis Cruz <joseluis@andamira.net>", "nick black <dankamongmen@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A high level Rust wrapper for the notcurses C library"
repository = "https://github.com/dankamongmen/notcurses-rs"
homepage = "https://nick-black.com/dankwiki/index.php/Notcurses"
readme = "./README.md"
categories = [
	"api-bindings",
	"command-line-interface",
	"visualization",
	"rendering",
]
keywords = ["tui", "cli", "terminal", "ncurses"]
include = [
	"/src/**/*rs",
	"/examples/hello-world.rs",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
publish = true

[features]
default = []

nightly_docs = ["vendored"]
vendored = ['libnotcurses-sys/use_vendored_bindings']

[dependencies]
libnotcurses-sys = { version = "3.10.0", features = ["std"] }
# libnotcurses-sys = { path = "../libnotcurses-sys", features = ["std"] }

once_cell = "1.17.0"
paste = "1.0.12"
rgb = { version = "0.8.35", default-features = false }
cuadra = "0.3.0"

[dev-dependencies]
rand = "0.8"

[package.metadata.docs.rs]
features = ["nightly_docs"]

[badges]
maintenance = { status = "actively-developed" }
